CS sdk接入 -- 新增文件上传方法 -- byte上传

--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -47,7 +47,7 @@ sdp_cs_default_instance_other=${ref-path}/dev_content_edu_product
 # 打包module实例
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
-# 以下四组配置一一对应
+# 以下5组配置一一对应
 # cs打包实例配置key
 sdp_cs_ref_key=${ref-path}/dev_content_edu,${ref-path}/dev_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
 # cs打包实例对应URL地址
@@ -56,6 +56,8 @@ sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://beta
 sdp_cs_ref_file_path=/dev_content_edu/esp,/dev_content_edu_product/esp,/preproduction_content_module_mng/test,/dev_content_edu/icplayer/latest
 # cs打包实例对应service id
 sdp_cs_ref_service_id=3b943a27-b300-4db0-b6ed-981eecb8496b,143477c8-86f5-416c-b76f-97562a6ce32e,40afb964-78c0-4be9-b929-3f6f909c3ecf,3b943a27-b300-4db0-b6ed-981eecb8496b
+# cs打包实例对应service name
+sdp_cs_ref_service_name=dev_content_edu,dev_content_edu_product,preproduction_content_module_mng,dev_content_edu
 
 # 转码服务触发url
 #sdp_transcode_service_url=http://esp-store-task.dev.web.nd/transcoding/service/proxy/create-task.json
