--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -50,7 +50,7 @@ sdp_cs_default_instance_other=${ref-path}/qa_content_edu_product
 # 打包module实例
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
-# 以下四组配置一一对应
+# 以下5组配置一一对应
 # cs打包实例配置key
 sdp_cs_ref_key=${ref-path}/qa_content_edu,${ref-path}/qa_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
 # cs打包实例对应URL地址
@@ -59,6 +59,8 @@ sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://beta
 sdp_cs_ref_file_path=/qa_content_edu/esp,/qa_content_edu_product/esp,/preproduction_content_module_mng/test,/qa_content_edu/icplayer/latest
 # cs打包实例对应service id
 sdp_cs_ref_service_id=b1b8762a-7d5e-48ca-ba3f-1e065e90a9cb,f1514936-94cd-421e-93bf-2b1a96e64a6a,40afb964-78c0-4be9-b929-3f6f909c3ecf,b1b8762a-7d5e-48ca-ba3f-1e065e90a9cb
+# cs打包实例对应service name
+sdp_cs_ref_service_name=qa_content_edu,qa_content_edu_product,preproduction_content_module_mng,qa_content_edu
 
 # 调度服务任务创建URL
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
