--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -63,6 +63,8 @@ sdp_cs_ref_url=${sdp_cs_ref_url}
 sdp_cs_ref_file_path=${sdp_cs_ref_file_path}
 # 各实例在cs的service_id,多个,用","隔开
 sdp_cs_ref_service_id=${sdp_cs_ref_service_id}
+# 各实例在cs的service_name,多个,用","隔开
+sdp_cs_ref_service_name=${sdp_cs_ref_service_name}
 
 #redis配置
 redis_url=${redis_url}
