--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -50,7 +50,7 @@ sdp_cs_default_instance_other=${ref-path}/prepub_content_edu_product
 # 打包module实例
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
-# 以下四组配置一一对应
+# 以下5组配置一一对应
 # cs打包实例配置key
 sdp_cs_ref_key=${ref-path}/prepub_content_edu,${ref-path}/prepub_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer},${ref-path}/dev_content_homework,${ref-path}/qa_content_homework,${ref-path}/prepub_content_homework
 # cs打包实例对应URL地址
@@ -59,6 +59,8 @@ sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://beta
 sdp_cs_ref_file_path=/prepub_content_edu/esp,/prepub_content_edu_product/esp,/preproduction_content_module_mng/test,/prepub_content_edu/icplayer/latest,/dev_content_homework,/qa_content_homework,/prepub_content_homework
 # cs打包实例对应service id
 sdp_cs_ref_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2,e49f1c47-01aa-4326-9525-ce25064ace63,40afb964-78c0-4be9-b929-3f6f909c3ecf,a4b26064-595f-47a5-9f81-6afcb2d296c2,71df41d8-496e-426e-a632-06f00c1188e3,a93358fe-8c73-4cce-85fc-55a93a8472ca,abcd9d18-0716-45e1-9933-95f77e7fdcbc
+# cs打包实例对应service name
+sdp_cs_ref_service_name=prepub_content_edu,prepub_content_edu_product,preproduction_content_module_mng,prepub_content_edu,dev_content_homework,qa_content_homework,prepub_content_homework
 
 # 调度服务任务创建url
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
