--- a/src/main/filters/filter-wxpressure.properties
+++ b/src/main/filters/filter-wxpressure.properties
@@ -41,7 +41,7 @@ sdp_cs_default_instance_other=${ref-path}/prepub_content_edu_product
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
 
-# 以下四组配置一一对应
+# 以下5组配置一一对应
 # cs打包实例配置key
 sdp_cs_ref_key=${ref-path}/prepub_content_edu,${ref-path}/prepub_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
 # cs打包实例对应URL地址
@@ -50,6 +50,8 @@ sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://beta
 sdp_cs_ref_file_path=/prepub_content_edu/esp,/prepub_content_edu_product/esp,/preproduction_content_module_mng/test,/prepub_content_edu/icplayer/latest
 # cs打包实例对应service id
 sdp_cs_ref_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2,e49f1c47-01aa-4326-9525-ce25064ace63,40afb964-78c0-4be9-b929-3f6f909c3ecf,a4b26064-595f-47a5-9f81-6afcb2d296c2
+# cs打包实例对应service name
+sdp_cs_ref_service_name=prepub_content_edu,prepub_content_edu_product,preproduction_content_module_mng,prepub_content_edu
 
 
 # 调度服务任务创建url
