增加新资源类型（习题集）的相关接口

--- a/src/main/resources/config/props/restype_corresponding_tablename.properties
+++ b/src/main/resources/config/props/restype_corresponding_tablename.properties
@@ -16,6 +16,7 @@ instructionalprototypes=prototypes
 questions=questions
 teachingmaterials=teachingmaterials
 examinationpapers=examination_papers
+exercisesset=examination_papers
 guidancebooks=teachingmaterials
 metacurriculums=teachingmaterials
 teachingactivities=teaching_activities
@@ -40,6 +41,7 @@ instructionalprototypes_entity=Prototype
 questions_entity=Question
 teachingmaterials_entity=TeachingMaterial
 examinationpapers_entity=ExaminationPapers
+exercisesset_entity=ExaminationPapers
 guidancebooks_entity=TeachingMaterial
 metacurriculums_entity=TeachingMaterial
 teachingactivities_entity=TeachingActivities
@@ -61,6 +63,7 @@ $RT0201=instructionalprototypes
 $RE0200=questions
 $RA0201=teachingmaterials
 $RE0300=examinationpapers
+$RE0500=exercisesset
 $RA0207=guidancebooks
 $RA0213=metacurriculums
 $RR0000=tools
