--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -140,6 +140,7 @@ elasticsearch.index.name=lcms_pre1_nd_education_resource
 
 #titan configure
 titan.domain=172.24.133.99,172.24.133.41,172.24.133.42
+#titan.domain=172.24.133.99
 #minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
 titan.search.pool.size=100,100,48,48
 titan.single.pool.size=50,50,24,24
