智慧课堂的数据统计 暂时提交

--- a/src/main/filters/filter-lwxdb.properties
+++ b/src/main/filters/filter-lwxdb.properties
@@ -17,6 +17,9 @@ waf.client.bearerToken.account.username=waf_loginer
 #访问UC服务的密码
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
+#admin 访问地址
+admin.uri=http://admin-new.debug.web.nd/
+
 #CS sdk配置
 sdp_cs_sdk_host=betacs.101.com
 sdp_cs_sdk_url_protocol=http
