--- a/src/main/filters/filter-pressure.properties
+++ b/src/main/filters/filter-pressure.properties
@@ -28,6 +28,8 @@ sdp_cs_api=http://betacs.101.com/v0.1
 #访问CS的service_id
 sdp_cs_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2
 
+#admin 访问地址
+admin.uri=http://admin-new.beta.web.sdp.101.com/
 
 sdp_cs_file_path=/prepub_content_edu/esp
 sdp_cs_file_path_temp=/esp
