--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -12,6 +12,9 @@ lcms.uri=http://esp-lifecycle.web.sdp.101.com
 #课件编辑器 访问地址
 slides.uri=http://esp-slides.edu.web.sdp.101.com/
 
+#admin 访问地址
+admin.uri=http://admin-new.edu.web.sdp.101.com/
+
 #waf uc相关配置 
 waf.uc.uri=https://aqapi.101.com/v0.93/
 #门户对应的组织
