--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -17,6 +17,9 @@ smartq.uri=${smartq.uri}
 #lc 访问地址
 lcms.uri=${lcms.uri}
 
+#admin 访问地址
+admin.uri=${admin.uri}
+
 #CS sdk配置
 sdp_cs_sdk_host=${sdp_cs_sdk_host}
 sdp_cs_sdk_url_protocol=${sdp_cs_sdk_url_protocol}
