--- a/src/main/filters/filter-titanlocalpresurre.properties
+++ b/src/main/filters/filter-titanlocalpresurre.properties
@@ -12,6 +12,9 @@ lcms.uri=http://esp-lifecycle.pre1.web.nd
 #课件编辑器 访问地址
 slides.uri=http://esp-slides.pre1.web.nd/
 
+#admin 访问地址
+admin.uri=http://admin-new.pre1.web.nd/
+
 #waf uc相关配置 
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
 #门户对应的组织
