--- a/pom.xml
+++ b/pom.xml
@@ -363,7 +363,11 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
-
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.0</version>
+			</plugin>
 
 		</plugins>
 		<defaultGoal>compile</defaultGoal>
