获取详细和批量获取详细 支持终端过滤

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -25,4 +25,4 @@ waf.exception.remote.httpstatus.proxy=false
 waf.exception.friendly.disabled=false
 
 #解决跨域时认不到bsyskey的问题
-waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey
+waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey, terminal
