--- a/src/main/resources/config/worker/worker.properties
+++ b/src/main/resources/config/worker/worker.properties
@@ -25,6 +25,9 @@ worker_video_transcode_service=5
 #图片转码worker service
 worker_image_transcode_service=6
 
+#文档转码worker service
+worker_document_transcode_service=7
+
 #教案转码worker service
 worker_lessonplan_transcode_service=3
 
