waf版本由0.10.2升级至0.15.0

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -26,3 +26,6 @@ waf.exception.friendly.disabled=false
 
 #解决跨域时认不到bsyskey的问题
 waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey, terminal
+
+#true加载用户信息（没配置默认是加载用户信息）
+waf.bearer.load.user.info=false
