--- a/src/test/resources/waf.properties
+++ b/src/test/resources/waf.properties
@@ -1,15 +1,31 @@
-//默认值 product，可以使用 waf.environment=test，由 CI/CD 进行设定。目前取值 product|test|development|{在SDP新建环境的名称}
+#默认值 product，可以使用 waf.environment=${env}，由 CI/CD 进行设定。目前取值 product|test|development|{在SDP新建环境的名称}
 waf.environment=test
-//UC 服务的根地址，默认取值为 https://aqapi.101.com/v0.93/, 一般需要通过 SDP 的 filter 进行设定
-//waf.uc.uri=http://101uccenter.beta.web.sdp.101.com/v0.93/
+#UC 服务的根地址，默认取值为 https://aqapi.101.com/v0.93/, 一般需要通过 SDP 的 filter 进行设定
+#waf.uc.uri=${waf.uc.uri}
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
-//用于进行 bearer token 认证的账号名
-waf.client.bearerToken.account.username=waf_loginer
-//用于进行 bearer token 认证的密码
-waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
+#用于进行 bearer token 认证的账号名
+waf.client.bearerToken.account.username=esp_lifecycle
+#用于进行 bearer token 认证的密码
+waf.client.bearerToken.account.password=d4876ded8c0df211825893ae8a3c6df9
 #（REQUIRED）标识当前用户的业务领域，当获取用户及角色信息时需要
 waf.uc.realm=lc.service.esp.nd
 #当前安全模块的鉴权行为（判断当前用户具备范围某些资源的权限）是否被禁用
 #waf.security.disabled=
 #指定当前是否启用调试模式，如果该值为指定则根据环境进行判断，非生产环境都认为启用调试模式
 #waf.debug.enabled=
+waf.client.socketTimeout=30000
+
+#加入trace能力
+waf.trace.enabled=${waf.trace.enabled}
+waf.zipkin.collector.host=${waf.zipkin.collector.host}
+
+#http status透传
+waf.exception.remote.httpstatus.proxy=false
+#异常信息message提示信息
+waf.exception.friendly.disabled=false
+
+#解决跨域时认不到bsyskey的问题
+waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey, terminal
+
+#true加载用户信息（没配置默认是加载用户信息）
+waf.bearer.load.user.info=false
