titan  indexquery 索引名改造成可配置形式（允许不同环境使用不同的索引名称）

--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -147,6 +147,7 @@ titan.domain=172.24.133.99
 #minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
 titan.search.pool.size=100,100,48,48
 titan.single.pool.size=50,50,24,24
+titan.es.resource.index=mixed_ndresource
 
 #trace
 waf.trace.enabled=true
