--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -144,6 +144,7 @@ titan.domain=10.33.6.161,10.33.23.24,10.33.23.25
 #minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
 titan.search.pool.size=100,100,48,48
 titan.single.pool.size=50,50,24,24
+titan.es.resource.index=mixed_ndresource
 
 #trace
 waf.trace.enabled=true
