--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -87,6 +87,7 @@ elasticsearch.index.name=${elasticsearch.index.name}
 titan.domain=${titan.domain}
 titan.search.pool.size=${titan.search.pool.size}
 titan.single.pool.size=${titan.single.pool.size}
+titan.es.resource.index=${titan.es.resource.index}
 
 #安全认证filter的类名
 #authenticationFilterName=${authentication_filter_name}
