--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.sun</groupId>
+		    <artifactId>jimi-nd</artifactId>
+		    <version>1.0</version>
+		</dependency>
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
