--- a/pom.xml
+++ b/pom.xml
@@ -324,8 +324,6 @@
 			</resource>
 		</resources>
 
-
-
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -368,14 +366,21 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
-			<plugin>
+			
+		</plugins>
+
+		
+		<defaultGoal>compile</defaultGoal>
+		
+		<pluginManagement>
+			<plugins>
+				<plugin>
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.0</version>
 			</plugin>
-
-		</plugins>
-		<defaultGoal>compile</defaultGoal>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<distributionManagement>
 		<repository>
