--- a/task-worker-document-transcode/pom.xml
+++ b/task-worker-document-transcode/pom.xml
@@ -236,6 +236,12 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.49</version>
+		</dependency>
 		<dependency>
 			<groupId>com.jacob</groupId>
 			<artifactId>com-jacob</artifactId>
