配置文件增加： 支持status排序 支持prop=description

--- a/src/main/resources/config/props/resource_props_range_es-retrieve.properties
+++ b/src/main/resources/config/props/resource_props_range_es-retrieve.properties
@@ -11,8 +11,9 @@ assets_language=language
 assets_edulanguage=edu_language
 assets_tags=tags
 assets_keywords=keywords
-#assets_ndres_code=ndres_code
+assets_ndres_code=ndres_code
 assets_lastupdate=lc_last_update
+assets_description=description
 
 ##CourseWareObject##
 coursewareobjects_creator=lc_creator
@@ -27,8 +28,45 @@ coursewareobjects_language=language
 coursewareobjects_edulanguage=edu_language
 coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
-#coursewareobjects_ndres_code=ndres_code
+coursewareobjects_ndres_code=ndres_code
 coursewareobjects_lastupdate=lc_last_update
+coursewareobjects_difficulty=edu_difficulty
+coursewareobjects_description=description
+
+##ExaminationPaper##
+examinationpapers_creator=lc_creator
+examinationpapers_publisher=lc_publisher
+examinationpapers_title=title
+examinationpapers_status=lc_status
+examinationpapers_author=cr_author
+examinationpapers_provider=lc_provider
+examinationpapers_create_time=lc_create_time
+examinationpapers_identifier=identifier
+examinationpapers_language=language
+examinationpapers_edulanguage=edu_language
+examinationpapers_tags=tags
+examinationpapers_keywords=keywords
+examinationpapers_ndres_code=ndres_code
+examinationpapers_lastupdate=lc_last_update
+examinationpapers_description=description
+
+##exercisesset##
+exercisesset_creator=lc_creator
+exercisesset_publisher=lc_publisher
+exercisesset_title=title
+exercisesset_status=lc_status
+exercisesset_author=cr_author
+exercisesset_provider=lc_provider
+exercisesset_create_time=lc_create_time
+exercisesset_identifier=identifier
+exercisesset_language=language
+exercisesset_edulanguage=edu_language
+exercisesset_tags=tags
+exercisesset_keywords=keywords
+exercisesset_ndres_code=ndres_code
+exercisesset_lastupdate=lc_last_update
+exercisesset_description=description
+
 
 ##Tools##
 tools_creator=lc_creator
@@ -43,8 +81,9 @@ tools_language=language
 tools_edulanguage=edu_language
 tools_tags=tags
 tools_keywords=keywords
-#tools_ndres_code=ndres_code
+tools_ndres_code=ndres_code
 tools_lastupdate=lc_last_update
+tools_description=description
 
 ##CourseWareObjectTemplate##
 coursewareobjecttemplates_creator=lc_creator
@@ -59,8 +98,9 @@ coursewareobjecttemplates_language=language
 coursewareobjecttemplates_edulanguage=edu_language
 coursewareobjecttemplates_tags=tags
 coursewareobjecttemplates_keywords=keywords
-#coursewareobjecttemplates_ndres_code=ndres_code
+coursewareobjecttemplates_ndres_code=ndres_code
 coursewareobjecttemplates_lastupdate=lc_last_update
+coursewareobjecttemplates_description=description
 
 ##CourseWare##
 coursewares_creator=lc_creator
@@ -76,8 +116,9 @@ coursewares_edulanguage=edu_language
 coursewares_tags=tags
 coursewares_keywords=keywords
 coursewares_difficulty=edu_difficulty
-#coursewares_ndres_code=ndres_code
+coursewares_ndres_code=ndres_code
 coursewares_lastupdate=lc_last_update
+coursewares_description=description
 
 ##Question##
 questions_creator=lc_creator
@@ -93,8 +134,9 @@ questions_edulanguage=edu_language
 questions_tags=tags
 questions_keywords=keywords
 questions_difficulty=edu_difficulty
-#questions_ndres_code=ndres_code
+questions_ndres_code=ndres_code
 questions_lastupdate=lc_last_update
+questions_description=description
 
 ##TeachingMaterial##
 teachingmaterials_creator=lc_creator
@@ -109,8 +151,9 @@ teachingmaterials_language=language
 teachingmaterials_edulanguage=edu_language
 teachingmaterials_tags=tags
 teachingmaterials_keywords=keywords
-#teachingmaterials_ndres_code=ndres_code
+teachingmaterials_ndres_code=ndres_code
 teachingmaterials_lastupdate=lc_last_update
+teachingmaterials_description=description
 
 ##Lesson##
 lessons_creator=lc_creator
@@ -125,8 +168,9 @@ lessons_language=language
 lessons_edulanguage=edu_language
 lessons_tags=tags
 lessons_keywords=keywords
-#lessons_ndres_code=ndres_code
+lessons_ndres_code=ndres_code
 lessons_lastupdate=lc_last_update
+lessons_description=description
 
 ##InstructionalObjective##
 instructionalobjectives_creator=lc_creator
@@ -141,8 +185,9 @@ instructionalobjectives_language=language
 instructionalobjectives_edulanguage=edu_language
 instructionalobjectives_tags=tags
 instructionalobjectives_keywords=keywords
-#instructionalobjectives_ndres_code=ndres_code
+instructionalobjectives_ndres_code=ndres_code
 instructionalobjectives_lastupdate=lc_last_update
+instructionalobjectives_description=description
 
 ##Knowledge##
 knowledges_creator=lc_creator
@@ -157,8 +202,9 @@ knowledges_language=language
 knowledges_edulanguage=edu_language
 knowledges_tags=tags
 knowledges_keywords=keywords
-#knowledges_ndres_code=ndres_code
+knowledges_ndres_code=ndres_code
 knowledges_lastupdate=lc_last_update
+knowledges_description=description
 
 ##Prototype##
 instructionalprototypes_creator=lc_creator
@@ -173,8 +219,9 @@ instructionalprototypes_language=language
 instructionalprototypes_edulanguage=edu_language
 instructionalprototypes_tags=tags
 instructionalprototypes_keywords=keywords
-#instructionalprototypes_ndres_code=ndres_code
+instructionalprototypes_ndres_code=ndres_code
 instructionalprototypes_lastupdate=lc_last_update
+instructionalprototypes_description=description
 
 ##Ebook##
 ebooks_creator=lc_creator
@@ -189,8 +236,9 @@ ebooks_language=language
 ebooks_edulanguage=edu_language
 ebooks_tags=tags
 ebooks_keywords=keywords
-#ebooks_ndres_code=ndres_code
+ebooks_ndres_code=ndres_code
 ebooks_lastupdate=lc_last_update
+ebooks_description=description
 
 ##HomeWork##
 homeworks_creator=lc_creator
@@ -205,8 +253,9 @@ homeworks_language=language
 homeworks_edulanguage=edu_language
 homeworks_tags=tags
 homeworks_keywords=keywords
-#homeworks_ndres_code=ndres_code
+homeworks_ndres_code=ndres_code
 homeworks_lastupdate=lc_last_update
+homeworks_description=description
 
 ##LessonPlans##
 lessonplans_creator=lc_creator
@@ -221,8 +270,9 @@ lessonplans_language=language
 lessonplans_edulanguage=edu_language
 lessonplans_tags=tags
 lessonplans_keywords=keywords
-#lessonplans_ndres_code=ndres_code
+lessonplans_ndres_code=ndres_code
 lessonplans_lastupdate=lc_last_update
+lessonplans_description=description
 
 ##LearningPlans##
 learningplans_creator=lc_creator
@@ -237,8 +287,9 @@ learningplans_language=language
 learningplans_edulanguage=edu_language
 learningplans_tags=tags
 learningplans_keywords=keywords
-#learningplans_ndres_code=ndres_code
+learningplans_ndres_code=ndres_code
 learningplans_lastupdate=lc_last_update
+learningplans_description=description
 
 ##GuidanceBooks##
 guidancebooks_creator=lc_creator
@@ -253,8 +304,26 @@ guidancebooks_language=language
 guidancebooks_edulanguage=edu_language
 guidancebooks_tags=tags
 guidancebooks_keywords=keywords
-#guidancebooks_ndres_code=ndres_code
+guidancebooks_ndres_code=ndres_code
 guidancebooks_lastupdate=lc_last_update
+guidancebooks_description=description
+
+##MetaCurriculums##
+metacurriculums_creator=lc_creator
+metacurriculums_publisher=lc_publisher
+metacurriculums_title=title
+metacurriculums_status=lc_status
+metacurriculums_author=cr_author
+metacurriculums_provider=lc_provider
+metacurriculums_create_time=lc_create_time
+metacurriculums_identifier=identifier
+metacurriculums_language=language
+metacurriculums_edulanguage=edu_language
+metacurriculums_tags=tags
+metacurriculums_keywords=keywords
+metacurriculums_ndres_code=ndres_code
+metacurriculums_lastupdate=lc_last_update
+metacurriculums_description=description
 
 ##Teachingactivities##
 teachingactivities_creator=lc_creator
@@ -270,8 +339,9 @@ teachingactivities_edulanguage=edu_language
 teachingactivities_tags=tags
 teachingactivities_keywords=keywords
 teachingactivities_difficulty=edu_difficulty
-#teachingactivities_ndres_code=ndres_code
+teachingactivities_ndres_code=ndres_code
 teachingactivities_lastupdate=lc_last_update
+teachingactivities_description=description
 
 ##eduresource##
 eduresource_creator=lc_creator
@@ -287,8 +357,9 @@ eduresource_language=language
 eduresource_edulanguage=edu_language
 eduresource_tags=tags
 eduresource_keywords=keywords
-#eduresource_ndres_code=ndres_code
+eduresource_ndres_code=ndres_code
 eduresource_lastupdate=lc_last_update
+eduresource_description=description
 
 ##Common##
 creator=lc_creator
@@ -305,12 +376,13 @@ language=language
 edulanguage=edu_language
 tags=tags
 keywords=keywords
-#ndres_code=ndres_code
+ndres_code=ndres_code
 lastupdate=lc_last_update
 
 ##OrderBy##
 order_title=title
-order_size=ti_size
+#order_size=ti_size
 order_create_time=lc_create_time
 order_last_update=lc_last_update
+order_status=lc_status
 #order_statisticals=key_value
