资源操作（POST/PUT/DELETE）记录

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -54,7 +54,7 @@ log4j.appender.DATABASE.URL=${jdbc.url}
 log4j.appender.DATABASE.driver=${jdbc.driver}
 log4j.appender.DATABASE.user=${jdbc.username}
 log4j.appender.DATABASE.password=${jdbc.password}
-log4j.appender.DATABASE.sql=INSERT INTO resource_operation_log (resource,res_type,operation_type,code_detail,remark) VALUES ('%X{resource}','%X{res_type}','%X{operation_type}','%-d{yyyy-MM-dd HH:mm:ss}  %-4r [%t] %-5p %c:%L %x - %m%n','%X{remark}')
+log4j.appender.DATABASE.sql=INSERT INTO resource_operation_log (resource,res_type,operation_type,creator,code_detail,remark) VALUES ('%X{resource}','%X{res_type}','%X{operation_type}','%X{creator}','%-d{yyyy-MM-dd HH:mm:ss}  %-4r [%t] %-5p %c:%L %x - %m%n','%X{remark}')
 log4j.appender.DATABASE.layout=org.apache.log4j.PatternLayout
 log4j.appender.DATABASE.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  %-4r [%t] %-5p %c:%L %x - %m%n
 
