--- a/src/main/resources/config/props/resource_props_range_es-retrieve.properties
+++ b/src/main/resources/config/props/resource_props_range_es-retrieve.properties
@@ -11,7 +11,7 @@ assets_language=language
 assets_edulanguage=edu_language
 assets_tags=tags
 assets_keywords=keywords
-assets_ndres_code=ndres_code
+#assets_ndres_code=ndres_code
 assets_lastupdate=lc_last_update
 assets_description=description
 
@@ -28,7 +28,7 @@ coursewareobjects_language=language
 coursewareobjects_edulanguage=edu_language
 coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
-coursewareobjects_ndres_code=ndres_code
+#coursewareobjects_ndres_code=ndres_code
 coursewareobjects_lastupdate=lc_last_update
 coursewareobjects_difficulty=edu_difficulty
 coursewareobjects_description=description
@@ -46,7 +46,7 @@ examinationpapers_language=language
 examinationpapers_edulanguage=edu_language
 examinationpapers_tags=tags
 examinationpapers_keywords=keywords
-examinationpapers_ndres_code=ndres_code
+#examinationpapers_ndres_code=ndres_code
 examinationpapers_lastupdate=lc_last_update
 examinationpapers_description=description
 
@@ -63,7 +63,7 @@ exercisesset_language=language
 exercisesset_edulanguage=edu_language
 exercisesset_tags=tags
 exercisesset_keywords=keywords
-exercisesset_ndres_code=ndres_code
+#exercisesset_ndres_code=ndres_code
 exercisesset_lastupdate=lc_last_update
 exercisesset_description=description
 
@@ -81,7 +81,7 @@ tools_language=language
 tools_edulanguage=edu_language
 tools_tags=tags
 tools_keywords=keywords
-tools_ndres_code=ndres_code
+#tools_ndres_code=ndres_code
 tools_lastupdate=lc_last_update
 tools_description=description
 
@@ -98,7 +98,7 @@ coursewareobjecttemplates_language=language
 coursewareobjecttemplates_edulanguage=edu_language
 coursewareobjecttemplates_tags=tags
 coursewareobjecttemplates_keywords=keywords
-coursewareobjecttemplates_ndres_code=ndres_code
+#coursewareobjecttemplates_ndres_code=ndres_code
 coursewareobjecttemplates_lastupdate=lc_last_update
 coursewareobjecttemplates_description=description
 
@@ -116,7 +116,7 @@ coursewares_edulanguage=edu_language
 coursewares_tags=tags
 coursewares_keywords=keywords
 coursewares_difficulty=edu_difficulty
-coursewares_ndres_code=ndres_code
+#coursewares_ndres_code=ndres_code
 coursewares_lastupdate=lc_last_update
 coursewares_description=description
 
@@ -134,7 +134,7 @@ questions_edulanguage=edu_language
 questions_tags=tags
 questions_keywords=keywords
 questions_difficulty=edu_difficulty
-questions_ndres_code=ndres_code
+#questions_ndres_code=ndres_code
 questions_lastupdate=lc_last_update
 questions_description=description
 
@@ -151,7 +151,7 @@ teachingmaterials_language=language
 teachingmaterials_edulanguage=edu_language
 teachingmaterials_tags=tags
 teachingmaterials_keywords=keywords
-teachingmaterials_ndres_code=ndres_code
+#teachingmaterials_ndres_code=ndres_code
 teachingmaterials_lastupdate=lc_last_update
 teachingmaterials_description=description
 
@@ -168,7 +168,7 @@ lessons_language=language
 lessons_edulanguage=edu_language
 lessons_tags=tags
 lessons_keywords=keywords
-lessons_ndres_code=ndres_code
+#lessons_ndres_code=ndres_code
 lessons_lastupdate=lc_last_update
 lessons_description=description
 
@@ -185,7 +185,7 @@ instructionalobjectives_language=language
 instructionalobjectives_edulanguage=edu_language
 instructionalobjectives_tags=tags
 instructionalobjectives_keywords=keywords
-instructionalobjectives_ndres_code=ndres_code
+#instructionalobjectives_ndres_code=ndres_code
 instructionalobjectives_lastupdate=lc_last_update
 instructionalobjectives_description=description
 
@@ -202,7 +202,7 @@ knowledges_language=language
 knowledges_edulanguage=edu_language
 knowledges_tags=tags
 knowledges_keywords=keywords
-knowledges_ndres_code=ndres_code
+#knowledges_ndres_code=ndres_code
 knowledges_lastupdate=lc_last_update
 knowledges_description=description
 
@@ -219,7 +219,7 @@ instructionalprototypes_language=language
 instructionalprototypes_edulanguage=edu_language
 instructionalprototypes_tags=tags
 instructionalprototypes_keywords=keywords
-instructionalprototypes_ndres_code=ndres_code
+#instructionalprototypes_ndres_code=ndres_code
 instructionalprototypes_lastupdate=lc_last_update
 instructionalprototypes_description=description
 
@@ -236,7 +236,7 @@ ebooks_language=language
 ebooks_edulanguage=edu_language
 ebooks_tags=tags
 ebooks_keywords=keywords
-ebooks_ndres_code=ndres_code
+#ebooks_ndres_code=ndres_code
 ebooks_lastupdate=lc_last_update
 ebooks_description=description
 
@@ -253,7 +253,7 @@ homeworks_language=language
 homeworks_edulanguage=edu_language
 homeworks_tags=tags
 homeworks_keywords=keywords
-homeworks_ndres_code=ndres_code
+#homeworks_ndres_code=ndres_code
 homeworks_lastupdate=lc_last_update
 homeworks_description=description
 
@@ -270,7 +270,7 @@ lessonplans_language=language
 lessonplans_edulanguage=edu_language
 lessonplans_tags=tags
 lessonplans_keywords=keywords
-lessonplans_ndres_code=ndres_code
+#lessonplans_ndres_code=ndres_code
 lessonplans_lastupdate=lc_last_update
 lessonplans_description=description
 
@@ -287,7 +287,7 @@ learningplans_language=language
 learningplans_edulanguage=edu_language
 learningplans_tags=tags
 learningplans_keywords=keywords
-learningplans_ndres_code=ndres_code
+#learningplans_ndres_code=ndres_code
 learningplans_lastupdate=lc_last_update
 learningplans_description=description
 
@@ -304,7 +304,7 @@ guidancebooks_language=language
 guidancebooks_edulanguage=edu_language
 guidancebooks_tags=tags
 guidancebooks_keywords=keywords
-guidancebooks_ndres_code=ndres_code
+#guidancebooks_ndres_code=ndres_code
 guidancebooks_lastupdate=lc_last_update
 guidancebooks_description=description
 
@@ -321,7 +321,7 @@ metacurriculums_language=language
 metacurriculums_edulanguage=edu_language
 metacurriculums_tags=tags
 metacurriculums_keywords=keywords
-metacurriculums_ndres_code=ndres_code
+#metacurriculums_ndres_code=ndres_code
 metacurriculums_lastupdate=lc_last_update
 metacurriculums_description=description
 
@@ -339,7 +339,7 @@ teachingactivities_edulanguage=edu_language
 teachingactivities_tags=tags
 teachingactivities_keywords=keywords
 teachingactivities_difficulty=edu_difficulty
-teachingactivities_ndres_code=ndres_code
+#teachingactivities_ndres_code=ndres_code
 teachingactivities_lastupdate=lc_last_update
 teachingactivities_description=description
 
@@ -357,7 +357,7 @@ eduresource_language=language
 eduresource_edulanguage=edu_language
 eduresource_tags=tags
 eduresource_keywords=keywords
-eduresource_ndres_code=ndres_code
+#eduresource_ndres_code=ndres_code
 eduresource_lastupdate=lc_last_update
 eduresource_description=description
 
@@ -376,7 +376,7 @@ language=language
 edulanguage=edu_language
 tags=tags
 keywords=keywords
-ndres_code=ndres_code
+#ndres_code=ndres_code
 lastupdate=lc_last_update
 
 ##OrderBy##
