--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels ###
-log4j.rootLogger = info, stdout,D,W,E,F
+log4j.rootLogger = error, stdout,D,W,E,F
  
 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
