集成环境连接到报表的集成环境

--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -85,9 +85,9 @@ jdbc.question.password=WZqGhCJlXg
 
 #报表库配置
 jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
-jdbc.report.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32271/qa_mysql_esp_report?fabricServerGroup\=my_group_3307&fabricUsername\=admin&fabricPassword\=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8
-jdbc.report.username=user_dzoqpi75e9
-jdbc.report.password=yJuYmxUh3j
+jdbc.report.url=jdbc:mysql:fabric://qa1.rds.sdp.nd:32272/prepub_mysql_esp_report?fabricServerGroup=my_group_3308&fabricUsername=admin&fabricPassword=bqTZDiWOW0sJmeM3&autoReconnect=true&useUnicode=true&characterEncoding=UTF8
+jdbc.report.username=user_fxh29zq3gn
+jdbc.report.password=YFrP4qevBk
 
 solr.zkHost=172.24.133.11\:2181,172.24.133.21\:2181,172.24.133.31\:2181
 solr.server.urls=http\://172.24.133.11/solr,http\://172.24.133.21/solr,http\://172.24.133.31/solr
